--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,7 @@ body {
   background: #cbebe9;
 }
 
+.borrow:hover{
+  transform: scale(1.05) ;
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+ }
